--- a/bandit_report.html
+++ b/bandit_report.html
@@ -1,96 +1,97 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
 
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
 
-    <title>
-        Bandit Report
-    </title>
+<title>
+    Bandit Report
+</title>
 
-    <style>
-        html * {
-            font-family: "Arial", sans-serif;
-        }
+<style>
 
-        pre {
-            font-family: "Monaco", monospace;
-        }
+html * {
+    font-family: "Arial", sans-serif;
+}
 
-        .bordered-box {
-            border: 1px solid black;
-            padding-top: .5em;
-            padding-bottom: .5em;
-            padding-left: 1em;
-        }
+pre {
+    font-family: "Monaco", monospace;
+}
 
-        .metrics-box {
-            font-size: 1.1em;
-            line-height: 130%;
-        }
+.bordered-box {
+    border: 1px solid black;
+    padding-top:.5em;
+    padding-bottom:.5em;
+    padding-left:1em;
+}
 
-        .metrics-title {
-            font-size: 1.5em;
-            font-weight: 500;
-            margin-bottom: .25em;
-        }
+.metrics-box {
+    font-size: 1.1em;
+    line-height: 130%;
+}
 
-        .issue-description {
-            font-size: 1.3em;
-            font-weight: 500;
-        }
+.metrics-title {
+    font-size: 1.5em;
+    font-weight: 500;
+    margin-bottom: .25em;
+}
 
-        .candidate-issues {
-            margin-left: 2em;
-            border-left: solid 1px LightGray;
-            padding-left: 5%;
-            margin-top: .2em;
-            margin-bottom: .2em;
-        }
+.issue-description {
+    font-size: 1.3em;
+    font-weight: 500;
+}
 
-        .issue-block {
-            border: 1px solid LightGray;
-            padding-left: .5em;
-            padding-top: .5em;
-            padding-bottom: .5em;
-            margin-bottom: .5em;
-        }
+.candidate-issues {
+    margin-left: 2em;
+    border-left: solid 1px; LightGray;
+    padding-left: 5%;
+    margin-top: .2em;
+    margin-bottom: .2em;
+}
 
-        .issue-sev-high {
-            background-color: Pink;
-        }
+.issue-block {
+    border: 1px solid LightGray;
+    padding-left: .5em;
+    padding-top: .5em;
+    padding-bottom: .5em;
+    margin-bottom: .5em;
+}
 
-        .issue-sev-medium {
-            background-color: NavajoWhite;
-        }
+.issue-sev-high {
+    background-color: Pink;
+}
 
-        .issue-sev-low {
-            background-color: LightCyan;
-        }
-    </style>
+.issue-sev-medium {
+    background-color: NavajoWhite;
+}
+
+.issue-sev-low {
+    background-color: LightCyan;
+}
+
+</style>
 </head>
 
 <body>
 
-    <div id="metrics">
-        <div class="metrics-box bordered-box">
-            <div class="metrics-title">
-                Metrics:<br>
-            </div>
-            Total lines of code: <span id="loc">760</span><br>
-            Total lines skipped (#nosec): <span id="nosec">0</span>
+<div id="metrics">
+    <div class="metrics-box bordered-box">
+        <div class="metrics-title">
+            Metrics:<br>
         </div>
+        Total lines of code: <span id="loc">760</span><br>
+        Total lines skipped (#nosec): <span id="nosec">0</span>
     </div>
+</div>
 
 
 
 
-    <br>
-    <div id="results">
-
-    </div>
+<br>
+<div id="results">
+    
+</div>
 
 </body>
-
 </html>
